# python-project-lvl4

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yaml
task_manager/: constants.py  settings.py  urls.py  utils.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_executor.py  0002_alter_task_executor_alter_task_labels.py  0002_initial.py  0003_alter_task_status.py  0003_task_labels_alter_task_author_alter_task_performer_and_more.py
task_manager/templates/: base.html  delete.html  form.html  index.html  login.html
task_manager/templates/labels/: create.html  delete.html  labels.html  update.html
task_manager/templates/statuses/: create.html  delete.html  statuses.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  tasks.html  update.html
task_manager/templates/users/: create.html  delete.html  update.html  users.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  (+1 more)
(+2 files in other folders)
