[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ilnarkz <ilnar-16_04@mail.ru>"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8"
whitenoise = "^6.2.0"
psycopg2-binary = "^2.9.3"
django-bootstrap4 = "^22.2"
python-dotenv = "^0.21.0"
django-filter = "^22.1"
rollbar = "^0.16.3"
dj-database-url = "0.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
